src/App.css
* {
  box-sizing: border-box;
}

html {
  font-size: 15px;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.4;
  color: #3b4344;
}

a {
  text-decoration: none;
  color: blueviolet;
  font-weight: 500;
}

input,
textarea,
button {
  appearance: none;
  font: inherit;
  font-size: 1.1rem; /* disable mobile zoom */
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.container {
  max-width: 40rem;
  margin: 0 auto;
  padding: 0 1rem;
}

nav {
  background: #fafafa;
  box-shadow: inset 0 -1px #eaeaea;
  /* padding: 1rem; */
  display: flex;
  justify-content: center;
  margin-bottom: 4rem;
}

.nav-item {
  font-size: 1.05rem;
  display: block;
  padding: 1rem 1.2rem;
  color: #999;
  text-decoration: none;
  text-transform: capitalize;
  transition: color 0.2s ease;
}

.nav-item:hover {
  color: #777;
}

.nav-item.active {
  color: #2b1b35;
  border-bottom: 2px solid #432535;
}

.title {
  text-align: center;
  margin-bottom: 2.5rem;
}

.blog-form {
  display: flex;
  flex-direction: column;
  max-width: 380px;
  margin: 0 auto;
  padding-bottom: 2rem;
}

.flex-column {
  display: flex;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.blog-form__label {
  font-weight: bold;
  margin-bottom: 0.5rem;
  letter-spacing: 1px;
  display: block;
}

.blog-form__title {
  border-radius: 5px;
  border: 2px solid #707070;
  padding: 0.75rem 1rem;
}

.blog-form__description {
  height: 120px;
  padding: 0.75rem 1rem;
  resize: none;
  border-radius: 5px;
  border: 2px solid #707070;
}

.blog-form__btn {
  padding: 0.825rem;
  font: inherit;
  border-radius: 25px;
  background: #303535;
  text-transform: capitalize;
  color: #fff;
  border: none;
  transition: 0.2s;
}

.blog-form__btn:hover {
  opacity: 0.9;
}

.blog-card {
  border: 1px solid lightgrey;
  background: #fff;
  padding: 1rem;
  border-radius: 5px;
  margin-bottom: 1.2rem;
}

.success-text {
  text-align: center;
  display: none;
}

